Fix: z-index of modal

--- a/component-library/components/sections/card-carousel/card-carousel.scss
+++ b/component-library/components/sections/card-carousel/card-carousel.scss
@@ -6,6 +6,7 @@
     row-gap: 24px;
     width: 100%;
     position: relative;
+    z-index: 10;
 
     &__heading {
         grid-column: 2;
